k8s/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ntfy.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: ntfy
          port: 80
  tls:
    secretName: ntfy-cert-tls
    domains:
      - main: ntfy.anshulg.com
